...
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/puzzle_view" />

        <com.example.puzzleherexamenandroid.puzzle.DrawingView
            android:id="@+id/drawingView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/draw_border"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/buttonStack"
            app:layout_constraintStart_toStartOf="parent"
...
                app:icon="@drawable/ic_eraser"
                app:iconTint="@null" />
        </LinearLayout>


        <Button
            android:id="@+id/submit"
            style="@style/IconOnlyButton"
            app:icon="@drawable/ic_tick"
            app:iconTint="@null"
            app:layout_constraintBottom_toBottomOf="@+id/drawingView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/drawingView" />
...
