...

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/solvedTitle"
            style="@style/TextAppearance.MyTheme.Headline1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/solved"
            app:layout_constraintEnd_toEndOf="parent"
...
