...
            android:id="@+id/title"
            style="@style/TextAppearance.MyTheme.Headline1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dogged_puzzles"
            android:textAlignment="center"
            app:layout_constraintBottom_toTopOf="@+id/continueGame"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.19999999"
            app:layout_constraintVertical_chainStyle="packed" />

...
